# ichatbio-nasa-power-agent

./: .gitignore  README.md  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
src/: agent.py  nasa_power_data.py  open_street_map.py  plot.py  util.py
src/utils/: dateUtil.py  parse.py  plot.py  procedures.py  util.py
tests/: conftest.py  example_data_v2.json  resource_loader.py  test_agent.py  test_agent_artifact.py  test_nasa_power_data.py  test_nasa_power_data_evaluation.py  test_schema.py
tests/evals/eval_assistant/: test_generate_expert_requests.py  test_nasa_power_agent.py
tests/evals/eval_assistant/test_sets/: generate_expert_requests.yaml  generate_expert_requests_nasa.yaml
tests/output/: output.json  output_api_batch_10concurrent.json  output_api_batch_mp_10processes.json  output_zarr_batch_10concurrent.json
tests/resources/: ALA_25records_artifact.json  GBIF_25records_artifact.json  OBIS_25records_artifact.json  __init__.py  buried_list_of_locations.json  iDigBio_25records_artifact.json  inaturalist_25records_artifact.json  list_of_buried_locations.json  list_of_location_strings.json  list_of_locations.json  list_of_locations_10.json  list_of_locations_1000_full.json  list_of_locations_20000_full.json  scriptRandomLocations.py  testcase.json
